1. 集成对象存储，编写通用操作类 2. 编写图片上传接口 3. 编写图片管理接口、获取图片信息接口

--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,13 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
+        <!-- 腾讯云 cos 服务 -->
+        <dependency>
+            <groupId>com.qcloud</groupId>
+            <artifactId>cos_api</artifactId>
+            <version>5.6.238</version>
+        </dependency>
+
 
     </dependencies>
     <dependencyManagement>
@@ -75,12 +82,12 @@
             </dependency>
 
             <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-bom</artifactId>
-            <version>3.5.9</version>
-            <type>pom</type>
-            <scope>import</scope>
-        </dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-bom</artifactId>
+                <version>3.5.9</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
