1.手动刷新缓存接口 2.抽象构建缓存key方法 3.调整可上传图片大小

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
     port: 6379
     timeout: 5000
   profiles:
-    active: wg
+    active: local
   # 开放更大的文件上传体积
   servlet:
     multipart:
