1. 基础图片编辑（裁剪、旋转、缩放） 2. AI 图片编辑 3. AI扩图空间调整为两倍

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -47,4 +47,12 @@ knife4j:
         api-rule-resources:
           - com.sion.sionpicturebackend.controller
 
+# 对象存储配置（需要从腾讯云获取）
+cos:
+  client:
+    host: xxxxxxxx
+    secretId: xxxxxxxx
+    secretKey: xxxxxxxx
+    region: xxxxxxxx
+    bucket: xxxxxxxx
 
