--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,12 @@
             <version>2.9.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>0.4.20</version>
+        </dependency>
+
 
     </dependencies>
     <dependencyManagement>
