--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,10 @@ server:
   port: 8123
   servlet:
     context-path: /api
+    # cookie 30 天过期
+    session:
+      cookie:
+        max-age: 2592000
 spring:
   application:
     name: sion-picture-backend
@@ -13,16 +17,50 @@ spring:
     password: wick1234
   # Redis 配置
   redis:
-    database: 0
+    database: 5
     host: 127.0.0.1
     port: 6379
     timeout: 5000
-  profiles:
-    active: local
+  # session 配置
+  session:
+    store-type: redis
+    # session 30 天过期
+    timeout: 2592000
+
   # 开放更大的文件上传体积
   servlet:
     multipart:
       max-file-size: 10MB
+
+  # 空间图片分表
+  shardingsphere:
+    datasource:
+      names: sion_picture
+      sion_picture:
+        type: com.zaxxer.hikari.HikariDataSource
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        # 生产环境关闭useSSL，本地开发环境开启useSSL
+        url: jdbc:mysql://localhost:3306/sion_picture?useSSL=false&allowPublicKeyRetrieval=true
+        username: root
+        password: wick1234
+    rules:
+      sharding:
+        tables:
+          picture:
+            actual-data-nodes: sion_picture.picture  # 动态分表
+            table-strategy:
+              standard:
+                sharding-column: spaceId
+                sharding-algorithm-name: picture_sharding_algorithm  # 使用自定义分片算法
+        sharding-algorithms:
+          picture_sharding_algorithm:
+            type: CLASS_BASED
+            props:
+              strategy: standard
+              algorithmClassName: com.sion.sionpicturebackend.manager.sharding.PictureShardingAlgorithm
+    props:
+      sql-show: true
+
 
 mybatis-plus:
   configuration:
@@ -34,6 +72,7 @@ mybatis-plus:
       logic-delete-field: isDelete # 全局逻辑删除的实体字段名
       logic-delete-value: 1 # 逻辑已删除值（默认为 1）
       logic-not-delete-value: 0 # 逻辑未删除值（默认为 0）
+    enable-sql-runner: true
 
 # 接口文档配置
 knife4j:
@@ -50,9 +89,24 @@ knife4j:
 # 对象存储配置（需要从腾讯云获取）
 cos:
   client:
-    host: xxxxxxxx
-    secretId: xxxxxxxx
-    secretKey: xxxxxxxx
-    region: xxxxxxxx
-    bucket: xxxxxxxx
+    host: xxxxxxxxxxxx
+    secretId: xxxxxxxxxxxx
+    secretKey: xxxxxxxxxxxx
+    region: xxxxxxxxxxxx
+    bucket: xxxxxxxxxxxx
+
+# r2 OSS 配置
+r2:
+  client:
+    access-key-id: xxxxxxxxxxxx
+    secret-access-key: xxxxxxxxxxxx
+    region: xxxxxxxxxxxx
+    endpoint: xxxxxxxxxxxx
+    bucket-name: xxxxxxxxxxxx
+    public-domain: xxxxxxxxxxxx
+
+# 阿里云 AI 配置
+aliYunAi:
+  apiKey: xxxxxxxxxxxx
+
 
