--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sion</groupId>
-    <artifactId>sion-picture-backend</artifactId>
+    <artifactId>sion-picture-backend-ddd</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>sion-picture-backend</name>
-    <description>sion-picture-backend</description>
+    <name>sion-picture-backend-ddd</name>
+    <description>sion-picture-backend-ddd</description>
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
